Fixed weird spacing on contact page on mobile, added hover animations on header, added description & og:description for each page

--- a/contact/style-contact.css
+++ b/contact/style-contact.css
@@ -16,6 +16,9 @@
         .contact-options {
             display: flex;
             gap: 25px;
+            p {
+                margin-bottom: 0;
+            }
             a {
                 text-decoration: none;
                 color: var(--logo-magenta);
